src/main/java/octopus/antlr/codegen/advanced_calc/AdvancedCalcParser.java
// Generated from
// /Users/octopus/octo/code/my-first-java/src/main/resources/g4/advanced_calc/AdvancedCalc.g4 by
// ANTLR 4.13.1
package octopus.antlr.codegen.advanced_calc;

import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class AdvancedCalcParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int T__0 = 1,
            T__1 = 2,
            T__2 = 3,
            CLEANMEM = 4,
            FAC = 5,
            POW = 6,
            MUL = 7,
            DIV = 8,
            ADD = 9,
            SUB = 10,
            DOT = 11,
            ID = 12,
            NUMBER = 13,
            NEWLINE = 14,
            WS = 15;
    public static final int RULE_prog = 0, RULE_stat = 1, RULE_expr = 2;

    private static String[] makeRuleNames() {
        return new String[] {"prog", "stat", "expr"};
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[] {
            null, "'='", "'('", "')'", "'CLEANMEM'", "'!'", "'^'", "'*'", "'/'", "'+'", "'-'", "'.'"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[] {
            null,
            null,
            null,
            null,
            "CLEANMEM",
            "FAC",
            "POW",
            "MUL",
            "DIV",
            "ADD",
            "SUB",
            "DOT",
            "ID",
            "NUMBER",
            "NEWLINE",
            "WS"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /** @deprecated Use {@link #VOCABULARY} instead. */
    @Deprecated public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "AdvancedCalc.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public AdvancedCalcParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ProgContext extends ParserRuleContext {
        public List<StatContext> stat() {
            return getRuleContexts(StatContext.class);
        }

        public StatContext stat(int i) {
            return getRuleContext(StatContext.class, i);
        }

        public ProgContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_prog;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterProg(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitProg(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitProg(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ProgContext prog() throws RecognitionException {
        ProgContext _localctx = new ProgContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_prog);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(7);
                _errHandler.sync(this);
                _la = _input.LA(1);
                do {
                    {
                        {
                            setState(6);
                            stat();
                        }
                    }
                    setState(9);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                } while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 28692L) != 0));
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatContext extends ParserRuleContext {
        public StatContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stat;
        }

        public StatContext() {}

        public void copyFrom(StatContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class BlankContext extends StatContext {
        public TerminalNode NEWLINE() {
            return getToken(AdvancedCalcParser.NEWLINE, 0);
        }

        public BlankContext(StatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterBlank(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitBlank(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitBlank(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class CleanmemContext extends StatContext {
        public TerminalNode CLEANMEM() {
            return getToken(AdvancedCalcParser.CLEANMEM, 0);
        }

        public CleanmemContext(StatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterCleanmem(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitCleanmem(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitCleanmem(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PrintExprContext extends StatContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode NEWLINE() {
            return getToken(AdvancedCalcParser.NEWLINE, 0);
        }

        public PrintExprContext(StatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterPrintExpr(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitPrintExpr(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitPrintExpr(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AssignContext extends StatContext {
        public TerminalNode ID() {
            return getToken(AdvancedCalcParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode NEWLINE() {
            return getToken(AdvancedCalcParser.NEWLINE, 0);
        }

        public AssignContext(StatContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterAssign(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitAssign(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitAssign(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatContext stat() throws RecognitionException {
        StatContext _localctx = new StatContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_stat);
        try {
            setState(21);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    _localctx = new PrintExprContext(_localctx);
                    enterOuterAlt(_localctx, 1);
                    {
                        setState(11);
                        expr(0);
                        setState(12);
                        match(NEWLINE);
                    }
                    break;
                case 2:
                    _localctx = new AssignContext(_localctx);
                    enterOuterAlt(_localctx, 2);
                    {
                        setState(14);
                        match(ID);
                        setState(15);
                        match(T__0);
                        setState(16);
                        expr(0);
                        setState(17);
                        match(NEWLINE);
                    }
                    break;
                case 3:
                    _localctx = new CleanmemContext(_localctx);
                    enterOuterAlt(_localctx, 3);
                    {
                        setState(19);
                        match(CLEANMEM);
                    }
                    break;
                case 4:
                    _localctx = new BlankContext(_localctx);
                    enterOuterAlt(_localctx, 4);
                    {
                        setState(20);
                        match(NEWLINE);
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ExprContext extends ParserRuleContext {
        public ExprContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_expr;
        }

        public ExprContext() {}

        public void copyFrom(ExprContext ctx) {
            super.copyFrom(ctx);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class NumberContext extends ExprContext {
        public TerminalNode NUMBER() {
            return getToken(AdvancedCalcParser.NUMBER, 0);
        }

        public NumberContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterNumber(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitNumber(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitNumber(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ParensContext extends ExprContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public ParensContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterParens(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitParens(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitParens(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class MulDivContext extends ExprContext {
        public Token op;

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode MUL() {
            return getToken(AdvancedCalcParser.MUL, 0);
        }

        public TerminalNode DIV() {
            return getToken(AdvancedCalcParser.DIV, 0);
        }

        public MulDivContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterMulDiv(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitMulDiv(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitMulDiv(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class AddSubContext extends ExprContext {
        public Token op;

        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode ADD() {
            return getToken(AdvancedCalcParser.ADD, 0);
        }

        public TerminalNode SUB() {
            return getToken(AdvancedCalcParser.SUB, 0);
        }

        public AddSubContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterAddSub(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitAddSub(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitAddSub(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class PowContext extends ExprContext {
        public List<ExprContext> expr() {
            return getRuleContexts(ExprContext.class);
        }

        public ExprContext expr(int i) {
            return getRuleContext(ExprContext.class, i);
        }

        public TerminalNode POW() {
            return getToken(AdvancedCalcParser.POW, 0);
        }

        public PowContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterPow(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitPow(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitPow(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class FacContext extends ExprContext {
        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode FAC() {
            return getToken(AdvancedCalcParser.FAC, 0);
        }

        public FacContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterFac(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitFac(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitFac(this);
            else return visitor.visitChildren(this);
        }
    }

    @SuppressWarnings("CheckReturnValue")
    public static class IdContext extends ExprContext {
        public TerminalNode ID() {
            return getToken(AdvancedCalcParser.ID, 0);
        }

        public IdContext(ExprContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).enterId(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof AdvancedCalcListener)
                ((AdvancedCalcListener) listener).exitId(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof AdvancedCalcVisitor)
                return ((AdvancedCalcVisitor<? extends T>) visitor).visitId(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ExprContext expr() throws RecognitionException {
        return expr(0);
    }

    private ExprContext expr(int _p) throws RecognitionException {
        ParserRuleContext _parentctx = _ctx;
        int _parentState = getState();
        ExprContext _localctx = new ExprContext(_ctx, _parentState);
        ExprContext _prevctx = _localctx;
        int _startState = 4;
        enterRecursionRule(_localctx, 4, RULE_expr, _p);
        int _la;
        try {
            int _alt;
            enterOuterAlt(_localctx, 1);
            {
                setState(30);
                _errHandler.sync(this);
                switch (_input.LA(1)) {
                    case NUMBER:
                        {
                            _localctx = new NumberContext(_localctx);
                            _ctx = _localctx;
                            _prevctx = _localctx;

                            setState(24);
                            match(NUMBER);
                        }
                        break;
                    case ID:
                        {
                            _localctx = new IdContext(_localctx);
                            _ctx = _localctx;
                            _prevctx = _localctx;
                            setState(25);
                            match(ID);
                        }
                        break;
                    case T__1:
                        {
                            _localctx = new ParensContext(_localctx);
                            _ctx = _localctx;
                            _prevctx = _localctx;
                            setState(26);
                            match(T__1);
                            setState(27);
                            expr(0);
                            setState(28);
                            match(T__2);
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
                _ctx.stop = _input.LT(-1);
                setState(45);
                _errHandler.sync(this);
                _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                while (_alt != 2 && _alt != org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER) {
                    if (_alt == 1) {
                        if (_parseListeners != null) triggerExitRuleEvent();
                        _prevctx = _localctx;
                        {
                            setState(43);
                            _errHandler.sync(this);
                            switch (getInterpreter().adaptivePredict(_input, 3, _ctx)) {
                                case 1:
                                    {
                                        _localctx =
                                                new PowContext(
                                                        new ExprContext(_parentctx, _parentState));
                                        pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                        setState(32);
                                        if (!(precpred(_ctx, 6)))
                                            throw new FailedPredicateException(
                                                    this, "precpred(_ctx, 6)");
                                        setState(33);
                                        match(POW);
                                        setState(34);
                                        expr(7);
                                    }
                                    break;
                                case 2:
                                    {
                                        _localctx =
                                                new MulDivContext(
                                                        new ExprContext(_parentctx, _parentState));
                                        pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                        setState(35);
                                        if (!(precpred(_ctx, 5)))
                                            throw new FailedPredicateException(
                                                    this, "precpred(_ctx, 5)");
                                        setState(36);
                                        ((MulDivContext) _localctx).op = _input.LT(1);
                                        _la = _input.LA(1);
                                        if (!(_la == MUL || _la == DIV)) {
                                            ((MulDivContext) _localctx).op =
                                                    (Token) _errHandler.recoverInline(this);
                                        } else {
                                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                            _errHandler.reportMatch(this);
                                            consume();
                                        }
                                        setState(37);
                                        expr(6);
                                    }
                                    break;
                                case 3:
                                    {
                                        _localctx =
                                                new AddSubContext(
                                                        new ExprContext(_parentctx, _parentState));
                                        pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                        setState(38);
                                        if (!(precpred(_ctx, 4)))
                                            throw new FailedPredicateException(
                                                    this, "precpred(_ctx, 4)");
                                        setState(39);
                                        ((AddSubContext) _localctx).op = _input.LT(1);
                                        _la = _input.LA(1);
                                        if (!(_la == ADD || _la == SUB)) {
                                            ((AddSubContext) _localctx).op =
                                                    (Token) _errHandler.recoverInline(this);
                                        } else {
                                            if (_input.LA(1) == Token.EOF) matchedEOF = true;
                                            _errHandler.reportMatch(this);
                                            consume();
                                        }
                                        setState(40);
                                        expr(5);
                                    }
                                    break;
                                case 4:
                                    {
                                        _localctx =
                                                new FacContext(
                                                        new ExprContext(_parentctx, _parentState));
                                        pushNewRecursionContext(_localctx, _startState, RULE_expr);
                                        setState(41);
                                        if (!(precpred(_ctx, 7)))
                                            throw new FailedPredicateException(
                                                    this, "precpred(_ctx, 7)");
                                        setState(42);
                                        match(FAC);
                                    }
                                    break;
                            }
                        }
                    }
                    setState(47);
                    _errHandler.sync(this);
                    _alt = getInterpreter().adaptivePredict(_input, 4, _ctx);
                }
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            unrollRecursionContexts(_parentctx);
        }
        return _localctx;
    }

    public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
        switch (ruleIndex) {
            case 2:
                return expr_sempred((ExprContext) _localctx, predIndex);
        }
        return true;
    }

    private boolean expr_sempred(ExprContext _localctx, int predIndex) {
        switch (predIndex) {
            case 0:
                return precpred(_ctx, 6);
            case 1:
                return precpred(_ctx, 5);
            case 2:
                return precpred(_ctx, 4);
            case 3:
                return precpred(_ctx, 7);
        }
        return true;
    }

    public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());

    static {
        _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
        for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
            _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
        }
    }
}
